fix docs a little
